tests/ui/type-alias-impl-trait/different_args_considered_equal.stderr
error: item does not constrain `Opaque::{opaque#0}`, but has it in its signature
  --> $DIR/different_args_considered_equal.rs:9:4
   |
LL | fn get_iter<'a>() -> impl IntoIterator<Item = Opaque<'a>> {
   |    ^^^^^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/different_args_considered_equal.rs:3:23
   |
LL | pub type Opaque<'a> = impl Sized;
   |                       ^^^^^^^^^^

error: aborting due to 1 previous error

